4week/kakao-controller-unit-test/src/main/java/com/example/kakao/_core/errors/exception/Exception400.java
package com.example.kakao._core.errors.exception;

import com.example.kakao._core.utils.ApiUtils;
import lombok.Getter;
import org.springframework.http.HttpStatus;


// 유효성 검사 실패, 잘못된 파라메터 요청 // 400에러
@Getter
public class Exception400 extends RuntimeException {

    public Exception400(String message) {
        super(message);
    }

    public ApiUtils.ApiResult<?> body(){
        return ApiUtils.error(getMessage(), HttpStatus.BAD_REQUEST);
    }
    // 메세지, 상태코드
    public HttpStatus status(){
        return HttpStatus.BAD_REQUEST;
    }
}